[gd_scene load_steps=3 format=3 uid="uid://1r5h23nlxob8"]

[ext_resource type="Script" path="res://Scripts/Pause_menu.gd" id="1_2y1b5"]
[ext_resource type="PackedScene" uid="uid://ps2w6o2mwdtk" path="res://Scences/Menu_Scences/Settings/Options.tscn" id="2_gio5l"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2y1b5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.423529)

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 10

[node name="Label" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Paused"

[node name="Resume" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Resume"

[node name="Setting" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Setting"

[node name="Menu" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Exit to Menu"

[node name="Options" parent="." instance=ExtResource("2_gio5l")]
visible = false
layout_mode = 1

[connection signal="pressed" from="ColorRect/GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Menu" to="." method="_on_menu_pressed"]
